--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,6 @@ MONGODB_URI = mongodb+srv://rockvikas300:J97ZJZwOm6AWeJZQ@cluster0.yazmw.mongodb
 
 PORT = 5001
 
+JWT_SECRET = scrttokennn
 
+NODE_ENV = development
