Creating Profile Route

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ PORT = 5001
 JWT_SECRET = scrttokennn
 
 NODE_ENV = development
+
+
+CLOUDINARY_CLOUD_NAME = dq0mcjtld
+CLOUDINARY_API_KEY =  926961271749944
+CLOUDINARY_API_SECRET =  DiJOucTWVGdHIAxbWc-tDtwBm3o
